--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class='container-button'>
         <input id='C' class='button c' type='button' name='C' value="C" style='background-color: rgb(16, 255, 16);' onclick="form1.result.value=''">
         <input id='clr' class='button clr' type='button' name='clr' value="<-" onclick="Clear()">
-        <input id='percent'  class='button percent' type='button' name='percent' value="%" onclick="form1.result.value=(Number(eval(form1.result.value))/100)">
+        <input id='percent'  class='button percent' type='button' name='percent' value="%" onclick="percentage()">
         <input id='div' class='button div' type='button' name='div' value="/" style='margin-right: 10px;' onclick="form1.result.value+='/'">  
             
         <input id='first'  class='button 1' value="1" type='button' name='first' onclick="form1.result.value+='1'">
